# mind-map

./: .gitignore  excalidraw_plan.md  manifest.md
app/: ARCHITECTURE.md  README.md  __init__.py  __main__.py  cli.py  config.py  default_config.yaml  excalidraw.py  graph.py  layout.py  parser.py  positions.py  pyproject.toml  requirements.txt  run.py
atlas/snowflake/: config.yaml  snowflake.excalidraw  snowflake.md  snowflake.positions.json
